--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,78 @@
-body{
-    background: #eee;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+    line-height: 1;
+    background: #f8f8f8;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+a{
+    text-decoration: none;
+    color: #282828;
+}
+a:hover{
+    color: #c00;
+}
+.container{
+    margin:40px;
+    line-height: 30px;
+    font-size: 16px;
+}
+.container ul{
+    display: flex;
+    flex-flow:wrap;
+	justify-content: first baseline;
+}
+.container li{
+    border:1px solid #eee;
+    background: #fff;
+    padding:10px;
+    margin:10px;
+    border-radius: 10px;
+}
+.container li:hover{
+    background: #fffff0;
+}
+.container li a{
+    margin:10px;
+}
+.container li .bottom{
+    color: #999;
+    font-size: 14px;
 }
